# bakkesmodplugin2

./: CMakeLists.txt  build.bat  build.ps1
.github/workflows/: build.yml
cfg/: SimpleGreeter.set  SpawnMiddle.set
src/: main.cpp
